# cmake_template

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  README_docker.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CPM.cmake  CompilerWarnings.cmake  Emscripten.cmake  Hardening.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
scripts/: client.py
src/: CMakeLists.txt  main.cpp
src/customer_lib/: CMakeLists.txt
src/customer_lib/customer/: group.hpp
src/ftxui_sample/: CMakeLists.txt
src/random_lib/: CMakeLists.txt
src/random_lib/random/: string_gen.cpp  string_generator.cpp  string_generator.hpp
src/restaurant_lib/: CMakeLists.txt
src/restaurant_lib/restaurant/: restaurant.cpp  restaurant.hpp  table.hpp
src/user_lib/: CMakeLists.txt
src/user_lib/user/: creator.cpp  creator.hpp  user.hpp
tests/: CMakeLists.txt
tests/random_lib/: CMakeLists.txt
tests/random_lib/random/: mock_string_generator.hpp  test_string_gen.cpp  test_string_generator.cpp
tests/restaurant_lib/: CMakeLists.txt
tests/restaurant_lib/restaurant/: test_restaurant.cpp
tests/user_lib/: CMakeLists.txt
tests/user_lib/user/: test_creator.cpp
